--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,6 +4,7 @@ monitor=eDP-1,1920x1080@60,0x0,1.0
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hyprctl setcursor Neutral 24
 exec-once = ags & swww init
+exec-once = hyprpm reload -n
 
 # Set programs that you use
 $terminal = foot
