--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,20 +1,16 @@
-monitor=eDP-1,1920x1080@60,0x0,1.0
+monitor=eDP-1,1920x1080@60,0x0,1.0 # resolution fix
 
-# Execute your favorite apps at launch
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = hyprctl setcursor Neutral 24
-exec-once = ags & swww init
-exec-once = hyprpm reload -n
-
-# Set programs that you use
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # screensharing
+exec-once = hyprctl setcursor Neutral 24 # cursor
+exec-once = hyprpm reload -n # plugins
+exec-once = ags & hyprpaper
+ 
 $terminal = foot
 $fileManager = nemo
 $menu = wofi --show drun
 
-# Some default env vars.
 env = XCURSOR_SIZE,24
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     kb_variant =
@@ -28,11 +24,10 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 6
     gaps_out = 12
@@ -42,12 +37,10 @@ general {
 
     layout = dwindle
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 0
     
@@ -66,8 +59,6 @@ decoration {
 animations {
     enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
     animation = windows, 1, 7, myBezier
@@ -79,18 +70,15 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = no # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = no 
+    preserve_split = yes
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
 }
 
@@ -119,24 +107,15 @@ plugin {
     }
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrulev2 = nomaximizerequest, class:.*
 
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
