--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,10 +50,10 @@ decoration {
         passes = 0
     }
 
-    drop_shadow = no
-    shadow_range = 0
-    shadow_render_power = 0
-    col.shadow = rgba(000000ee)
+    drop_shadow = yes
+    shadow_range = 12
+    shadow_render_power = 4
+    col.shadow = rgba(00000055)
 }
 
 animations {
@@ -98,12 +98,17 @@ plugin {
         bar_height = 50
         bar_color = rgb(282828)
         bar_text_font = CozetteHiDpi
-        bar_text_size = 23
+        bar_precedence_over_border = true
         bar_part_of_window = true
+        bar_text_align = left
+        bar_buttons_alignment = right
+        bar_padding = 12
+        bar_button_padding = 8
+        bar_text_size = 23
         col.text = rgb(eeeeee)
 
-        hyprbars-button = rgb(282828), 25, , hyprctl dispatch killactive
-        hyprbars-button = rgb(282828), 25, , hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(282828), 33, , hyprctl dispatch killactive
+        hyprbars-button = rgb(282828), 33, , hyprctl dispatch fullscreen 1
     }
 }
 
@@ -133,8 +138,9 @@ bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bind = , XF86MonBrightnessUp, exec, brightnessctl set 10%+ 
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 bind = $mainMod, A, exec, pkill ags && ags
+
 bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = , Print, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
+bind = , Print, exec, grim - | tee $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png') | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
