--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload= /home/beck/Pictures/Wallpapers/robot in snow.png
-wallpaper= eDP-1,/home/beck/Pictures/Wallpapers/robot in snow.png
+preload= /home/beck/Pictures/Wallpapers/ponyo.jpg
+wallpaper= eDP-1,/home/beck/Pictures/Wallpapers/ponyo.jpg
