--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,13 +1,14 @@
 monitor=eDP-1,1920x1080@60,0x0,1.0 # resolution fix
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # screensharing
-exec-once = hyprctl setcursor Neutral 24 # cursor
+exec-once = hyprctl setcursor Pixel-Linux-Cursor 24 # cursor
 exec-once = hyprpm reload -n # plugins
-exec-once = ags & hyprpaper
+exec-once = ags
+exec-once = sleep 1; swww init
  
 $terminal = foot
 $fileManager = nemo
-$menu = wofi --show drun
+$menu = ags --toggle-window "applauncher"
 
 env = XCURSOR_SIZE,24
 
@@ -107,8 +108,8 @@ plugin {
         bar_text_size = 23
         col.text = rgb(eeeeee)
 
-        hyprbars-button = rgb(282828), 33, , hyprctl dispatch killactive
-        hyprbars-button = rgb(282828), 33, , hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(282828), 35, , hyprctl dispatch killactive
+        hyprbars-button = rgb(282828), 35, , hyprctl dispatch fullscreen 1
     }
 }
 
