--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -106,7 +106,7 @@ plugin {
         bar_padding = 12
         bar_button_padding = 8
         bar_text_size = 23
-        col.text = rgb(eeeeee)
+        col.text = 0x0
 
         hyprbars-button = rgb(282828), 35, , hyprctl dispatch killactive
         hyprbars-button = rgb(282828), 35, , hyprctl dispatch fullscreen 1
