--- a/starship.toml
+++ b/starship.toml
@@ -9,13 +9,8 @@ $cmd_duration\
 $line_break\
 $python"""
 
-[directory]
-style = "fg:#282828 bg:#229FF7"
-home_symbol = "☺"
-format = " [ $path ]($style) "
-
 [character]
-success_symbol = "[ ☺ ](fg:#282828 bg:#D7888B)"
+success_symbol = "[ ☺ ](fg:#282828 bg:#D3E58F)"
 error_symbol = "[ ☹ ](fg:#282828 bg:#C01C28)"
 
 [git_branch]
@@ -39,7 +34,7 @@ style = "bright-black"
 
 [cmd_duration]
 format = "[$duration]($style) "
-style = "fg:#D7888B bg:#282828"
+style = "fg:#D3E58F bg:#282828"
 
 [python]
 format = "[$virtualenv]($style) "
