--- a/starship.toml
+++ b/starship.toml
@@ -10,7 +10,7 @@ $line_break\
 $python"""
 
 [character]
-success_symbol = "[ ☺ ](fg:#282828 bg:#D3E58F)"
+success_symbol = "[ ☺ ](fg:#282828 bg:#DD1472)"
 error_symbol = "[ ☹ ](fg:#282828 bg:#C01C28)"
 
 [git_branch]
@@ -34,7 +34,7 @@ style = "bright-black"
 
 [cmd_duration]
 format = "[$duration]($style) "
-style = "fg:#D3E58F bg:#282828"
+style = "fg:#DD1472 bg:#282828"
 
 [python]
 format = "[$virtualenv]($style) "
